--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -525,7 +525,7 @@ CABEÇALHO DO MODAL
 /* Header do Formulário */
 .studium-form-header {
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     margin-bottom: var(--spacing-md);
 }
 
